# AirGym-Real

./: .gitignore  .gitmodules  README.md  S_one_shot_single.sh  S_rosbag.sh  create_inference_conda_env.sh  inference.sh  inference_conda_env.yml  kill_one_shot.sh  land.sh  one_shot_single.sh  rosbag.sh  send_target_state.sh  takeoff.sh
src/inference/: CMakeLists.txt  package.xml
src/inference/launch/: inference_runner.launch  target_pub.launch
src/inference/src/: X152b_inference.yaml  inference_runner.py  players.py  target_pub.py
src/inference/src/envs/: inference.py
src/inference/src/utils/: torch_ext.py
src/vins_fusion_d435/config/: new_vins.rviz  right.yaml  vins_rviz_config.rviz  vins_with_d435temp.yaml
src/vins_fusion_d435/param_files/real_use/: README.md  drone_param.yaml
src/vins_fusion_d435/param_files/real_use/drone_detect/: depth_camera.yaml
src/vins_fusion_d435/param_files/real_use/vins/: left.yaml  right.yaml  vins_with_d435.yaml
src/vins_fusion_d435/vins_estimator/launch/: d435.launch  d435_no_rviz.launch
src/vins_fusion_d435/vins_estimator/src/utility/: visualization.cpp
